# assignment-1-decide

./: .gitignore  README.md  STATEMENT_OF_CONTRIBUTION.md  pyproject.toml
.github/issue-prs/: issue-11.md  issue-13.md  issue-15.md  issue-17.md  issue-19.md  issue-21.md  issue-25.md  issue-27.md  issue-29.md  issue-3.md  issue-31.md  issue-35.md  issue-37.md  issue-39.md  issue-41.md  issue-45.md  issue-47.md  issue-49.md  issue-5.md  issue-51.md  issue-53.md  issue-58.md  issue-60.md  issue-62.md  issue-64.md  issue-66.md  issue-68.md  issue-7.md  issue-70.md  issue-72.md  issue-74.md  issue-76.md  issue-78.md  issue-81.md  issue-83.md  issue-85.md  issue-87.md  issue-89.md  issue-9.md
.github/workflows/: ci-run-tests.yml  docs-code-cov-badge.yml  open-pr-for-issue.yml
src/: Parameters_T.py  cmv.py  fuv.py  lics.py  main.py  plane_utils.py  pum.py  types.py  utils.py
tests/: .gitignore  fuv_test.py  init_test.py  lic10_test.py  lic11_test.py  lic12_test.py  lic13_test.py  lic14_test.py  lic1_test.py  lic2_test.py  lic3_test.py  lic4_test.py  lic5_test.py  lic6_test.py  lic7_test.py  lic8_test.py  lic9_test.py  pum_test.py
tests/whole_program_cases/: case0_false.json  case0_true.json  case1_false.json  case1_true.json  case2_true.json  case3_true.json  lic0_test.py
