[project]
name = "Launch-Interceptor"
version = "0.1.0"
requires-python = ">=3"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
